# qu-24-Offline-Editor

./: -pthread  GUI  GUI.cpp  GUI.css  GUI.h  Makefile  QU24-Offline-Editor.cpp  QU24-Offline-Editor.h  README.md  ReferenceImage.jpg:Zone.Identifier  meson.build  qu-scene.ksy  qu_scene.cpp  qu_scene.h  temp.scene  test
include/: GUI.h  Global.h  QU24-Offline-Editor.h
include/GUI/: Fader.h  GUIScene.h  MyWindow.h
kaitai_struct_cpp_stl_runtime/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Windows.cmake  cmake_install.cmake  install_manifest.txt
kaitai_struct_cpp_stl_runtime/.build/: build  build.ps1  run-unittest  run-unittest.ps1
kaitai_struct_cpp_stl_runtime/kaitai/: kaitaistream.cpp  kaitaistream.h
kaitai_struct_cpp_stl_runtime/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest-nano.h  unittest  unittest.cpp
src/: GUI.cpp  GUI.css  QU24-Offline-Editor.cpp  qu_scene.cpp
src/GUI/: Fader.cpp  GUIScene.cpp  MyWindow.cpp
win/: PKGBUILD  logpipe.3McIxqwr  logpipe.SCIvBAWk  qu-24-Offline-Editor.git
win/qu-24/: config  packed-refs
win/qu-24/objects/pack/: pack-90d5ace37bbf729c69884f5832016fe52ed13f16.idx
